new URL is deprecated, use new URI, setGID, imgur